tests/ui/consts/const_in_pattern/cross-crate-fail.stderr
error: to use a constant of type `CustomEq` in a pattern, `CustomEq` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/cross-crate-fail.rs:11:9
   |
LL |         consts::SOME => panic!(),
   |         ^^^^^^^^^^^^
   |
  ::: $DIR/auxiliary/consts.rs:11:1
   |
LL | pub const SOME: Option<CustomEq> = Some(CustomEq);
   | -------------------------------- constant defined here
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: to use a constant of type `CustomEq` in a pattern, `CustomEq` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/cross-crate-fail.rs:18:9
   |
LL |         <Defaulted as consts::AssocConst>::SOME  => panic!(),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: $DIR/auxiliary/consts.rs:15:5
   |
LL |     const SOME: Option<CustomEq> = Some(CustomEq);
   |     ---------------------------- constant defined here
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: aborting due to 2 previous errors

